--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 <!--                        <configuration>-->
 <!--                            <transformers>-->
 <!--                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-<!--                                    <mainClass>world.ucode.Pixelizator</mainClass>-->
+<!--                                    <mainClass>Main</mainClass>-->
 <!--                                </transformer>-->
 <!--                            </transformers>-->
 <!--                        </configuration>-->
